--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -175,7 +175,8 @@ pre {
   word-wrap: break-word;
   // background-color: #f9f9f9;
   background-color: #e6e6e6;
-
+  //추가
+  tab-size: 1;
 }
 pre code {
   padding: 0;
