--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -297,6 +297,8 @@ tbody tr:nth-child(odd) th {
   padding-right: 1rem;
   margin-left:  auto;
   margin-right: auto;
+  // 추가
+  margin-top: auto;
 }
 
 
